--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^8.6.8",
+    "js-cookie": "^3.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
